<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="startSingleNetworkCallActivity"
            android:text="@string/single_network_call"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startSeriesNetworkCallsActivity"
            android:text="@string/series_network_calls"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startParallelNetworkCallsActivity"
            android:text="@string/parallel_network_calls"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startRoomDatabaseActivity"
            android:text="@string/room_database"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startTimeoutActivity"
            android:text="@string/timeout"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startTryCatchActivity"
            android:text="@string/try_catch_error"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startExceptionHandlerActivity"
            android:text="@string/exception_handler"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startIgnoreErrorAndContinueActivity"
            android:text="@string/ignore_error_and_continue"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="@+id/button9"
            app:layout_constraintStart_toStartOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="startLongRunningTaskActivity"
            android:text="@string/long_running_task"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="startTwoLongRunningTasksActivity"
            android:text="@string/two_long_running_tasks"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button9"
            app:layout_constraintStart_toStartOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
